--- a/css/archive.css
+++ b/css/archive.css
@@ -12,7 +12,7 @@
     align-items: center;
     text-align: center;
     background-color: #222;
-    padding: 50px;
+    padding: 20px;
     margin: 0 100px 100px;
     border: solid 3px white;
 }
@@ -38,4 +38,44 @@
 .username {
     font-size: large;
     color: orange;
+    text-decoration: none;
+}
+
+.username:hover {
+    color: black;
+}
+
+.popup a, .popup a:visited {
+	position: relative;
+	display: block;
+}
+
+.popup a span {
+	display: none;
+}
+
+.popup a:hover span {
+	display: block;
+	position: absolute;
+	top: 0px;
+	left: 170px;
+	width: 100px;
+	margin: 0px;
+	padding: 10px;
+	font-weight: normal;
+	background: #e5e5e5;
+	border: 1px solid #666;
+}
+
+.user-box {
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.like, .comment{
+    white-space: pre-line;
+    margin: 0 10px 0 10px;
 }
